Fixed an issue where <p> was a descendant of <p> - Renamed constants to be more readable. - Added the remaining questions - modified svg to give a subtle ring around nodes when in boxes. - adjusted size of various components to utilize screen real estate.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -24,14 +24,16 @@ body {
 }
 
 .legend {
-  position: absolute;
-  left: 100%;
-  top: 50%;
-  transform: translateY(-50%);
+  /* position: absolute; */
+  /* left: 100%;
+  top: 50%; */
+  /* transform: translateY(-50%); */
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  margin-right: calc;
-  width: calc((100vw - 1140px) / 2);
+  width: min-content;
+
+  /* width: calc((100vw - 1140px) / 2); */
 }
 
 .legend .legendNode {
@@ -76,15 +78,21 @@ body {
 }
 
 .container {
+  position: relative;
   background-color: 'white';
   width: 100%;
-  max-width: 1140px;
+  height: 100vh;
+  max-width: 100vw;
   padding-top: 15px;
   padding-bottom: 5px;
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+}
+#boxes {
+  display: block;
+  height: 100vh;
 }
 
 #usr {
@@ -95,6 +103,11 @@ body {
   border-radius: 0.25rem;
   text-align: center;
   margin-left: 0.25rem;
+}
+
+.usrInput {
+  height: max-content;
+  padding: 50px;
 }
 
 #content {
@@ -128,6 +141,8 @@ body {
 
 #userInputStd {
   margin-bottom: 2.5rem;
+  height: max-content;
+  padding: 50px;
 }
 
 .textBox {
@@ -143,6 +158,13 @@ body {
   line-height: 1.25;
   font-size: 1.3rem;
   box-shadow: 0 0 6px grey;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.textBox div {
+  height: max-content;
 }
 
 .slider {
